Trying to fix viewport issues on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@
     var(--second-gradient-color) 100%
   );
   --dark-gray: rgb(153, 153, 153);
-  
 }
 
 * {
@@ -57,11 +56,6 @@ footer {
   z-index: -10;
   text-align: center;
   background-image: var(--sideways-gradient);
-}
-
-
-.edit-height {
-  height: 100vh;
 }
 
 .hidden {
@@ -207,7 +201,7 @@ a:hover {
 }
 
 footer .row div {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 
@@ -480,4 +474,12 @@ footer .row div {
 }
 #timeline .timeline-card .timeline-card-head::after {
   border-color: black;
+}
+
+/***************************************************************************************************/
+/**************************************Projects*****************************************************/
+/***************************************************************************************************/
+
+#projects {
+  background-image: var(--gradient);
 }
